--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qansigliere-launchdarkly-api-integration",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "description": "The main idea of this library created in the JavaScript language is to provide a ready-made set of API methods for integration with LaunchDarkly",
   "main": "index.js",
   "scripts": {
@@ -31,5 +31,8 @@
   "homepage": "https://github.com/QANSIGLIERE/LaunchDarklyAPIIntegration#readme",
   "dependencies": {
     "qansigliere-axios-utils": "^1.8.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
